# refusal-robustness-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ETHICS.md  OPERATORS.md
scripts/: make_example_figures.py
src/refusal_robustness/: __init__.py  datasets.py  harness.py  judge.py  metrics.py  operators.py  plots.py
tests/: test_metrics.py  test_plots.py
