[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "refusal-robustness-eval"
version = "0.0.1"
description = "Measuring LLM refusal robustness under adversarial reformulation"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Johnpaul Mbagwu" }]
keywords = ["ai-safety", "evaluation", "llm", "jailbreak-robustness", "red-teaming"]
dependencies = []

[project.optional-dependencies]
plot = ["matplotlib>=3.6"]
dev = ["pytest>=7", "matplotlib>=3.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
